--- a/BookSaleProject/src/main/resources/templates/bookDetail.html
+++ b/BookSaleProject/src/main/resources/templates/bookDetail.html
@@ -86,8 +86,10 @@
                                 style="width: 45px;height: 50px;background-color: #333;color: white;">
                             <input type="button" value="+" class="button-plus border icon-shape icon-sm mx-1" data-field="quantity">
                          </div>
-                        <a href="#">
-                            <i class="fa-solid fa-cart-shopping" style="font-size: 30px;color: #01a14b;">THÊM VÀO GIỎ</i>
+                        <a href="#" style="font-size: 20px;color:white;border: 10px solid;background-color: #01a14b;">
+                            <i class="fa-solid fa-cart-shopping">
+                                <p style="display: inline-flex;font-family:Arial, Helvetica, sans-serif ">THÊM VÀO GIỎ</p>
+                            </i>
                         </a>
                     </div>
 
