--- a/BookSaleProject/src/main/resources/templates/bookDetail.html
+++ b/BookSaleProject/src/main/resources/templates/bookDetail.html
@@ -81,14 +81,18 @@
 
                     <div style="padding-top: 2%;">
                         <div class="input-group w-auto align-items-center" style="display: inline-flex;">
-                            <input type="button" value="-" class="button-minus border  icon-shape icon-sm mx-1 " data-field="quantity">
-                            <input type="text" step="1" max="10" value="1" name="quantity" class="quantity-field border-0 text-center" 
+                            <input type="button" value="-" class="button-minus border  icon-shape icon-sm mx-1 "
+                                data-field="quantity">
+                            <input type="text" step="1" max="10" value="1" name="quantity"
+                                class="quantity-field border-0 text-center"
                                 style="width: 45px;height: 50px;background-color: #333;color: white;">
-                            <input type="button" value="+" class="button-plus border icon-shape icon-sm mx-1" data-field="quantity">
-                         </div>
-                        <a href="#" style="font-size: 20px;color:white;border: 10px solid;background-color: #01a14b;">
-                            <i class="fa-solid fa-cart-shopping">
-                                <p style="display: inline-flex;font-family:Arial, Helvetica, sans-serif ">THÊM VÀO GIỎ</p>
+                            <input type="button" value="+" class="button-plus border icon-shape icon-sm mx-1"
+                                data-field="quantity">
+                        </div>
+                        <a href="#" style="font-size: 25px;color:#01a14b;border: none;">
+                            <i class="fa-solid fa-cart-shopping" style="font-weight: bolder;">
+                                <p style="display: inline-flex;font-family:'Times New Roman', Times, serif">THÊM VÀO GIỎ
+                                </p>
                             </i>
                         </a>
                     </div>
@@ -202,13 +206,18 @@
 
                                                             <div style="padding-top: 2%;">
                                                                 <div class="input-group w-auto align-items-center" style="display: inline-flex;">
-                                                                    <input type="button" value="-" class="button-minus border  icon-shape icon-sm mx-1 " data-field="quantity">
-                                                                    <input type="text" step="1" max="10" value="1" name="quantity" class="quantity-field border-0 text-center" 
+                                                                    <input type="button" value="-" class="button-minus border  icon-shape icon-sm mx-1 "
+                                                                        data-field="quantity">
+                                                                    <input type="text" step="1" max="10" value="1" name="quantity"
+                                                                        class="quantity-field border-0 text-center"
                                                                         style="width: 45px;height: 50px;background-color: #333;color: white;">
-                                                                    <input type="button" value="+" class="button-plus border icon-shape icon-sm mx-1" data-field="quantity">
-                                                                 </div>
-                                                                <a href="#">
-                                                                    <i class="fa-solid fa-cart-shopping" style="font-size: 30px;color: #01a14b;">THÊM VÀO GIỎ</i>
+                                                                    <input type="button" value="+" class="button-plus border icon-shape icon-sm mx-1"
+                                                                        data-field="quantity">
+                                                                </div>
+                                                                <a href="#" style="font-size: 25px;color:#01a14b;border: none;">
+                                                                    <i class="fa-solid fa-cart-shopping" style="font-weight: bolder;">
+                                                                        <p style="display: inline-flex;font-family:'Times New Roman', Times, serif">THÊM VÀO GIỎ</p>
+                                                                    </i>
                                                                 </a>
                                                             </div>
                                                         </div>
