--- a/BookSaleProject/src/main/resources/templates/index.html
+++ b/BookSaleProject/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
   <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
   <script th:src="@{/js/reUse.js}"></script>
   <link rel="stylesheet" type="text/css" th:href="@{/css/spinButton.css}">
-    <script th:src="@{/js/spinButton.js}"></script>
+  <script th:src="@{/js/spinButton.js}"></script>
   <title>Document</title>
 </head>
 
@@ -138,9 +138,12 @@
                                   <input type="button" value="+" class="button-plus border icon-shape icon-sm mx-1"
                                     data-field="quantity">
                                 </div>
-                                <a href="#">
-                                  <i class="fa-solid fa-cart-shopping" style="font-size: 30px;color: #01a14b;">THÊM VÀO
-                                    GIỎ</i>
+                                <a href="#" style="font-size: 25px;color:#01a14b;border: none;">
+                                  <i class="fa-solid fa-cart-shopping" style="font-weight: bolder;">
+                                    <p style="display: inline-flex;font-family:'Times New Roman', Times, serif">THÊM VÀO
+                                      GIỎ
+                                    </p>
+                                  </i>
                                 </a>
                               </div>
                             </div>
@@ -271,9 +274,12 @@
                                   <input type="button" value="+" class="button-plus border icon-shape icon-sm mx-1"
                                     data-field="quantity">
                                 </div>
-                                <a href="#">
-                                  <i class="fa-solid fa-cart-shopping" style="font-size: 30px;color: #01a14b;">THÊM VÀO
-                                    GIỎ</i>
+                                <a href="#" style="font-size: 25px;color:#01a14b;border: none;">
+                                  <i class="fa-solid fa-cart-shopping" style="font-weight: bolder;">
+                                    <p style="display: inline-flex;font-family:'Times New Roman', Times, serif">THÊM VÀO
+                                      GIỎ
+                                    </p>
+                                  </i>
                                 </a>
                               </div>
                             </div>
@@ -319,6 +325,10 @@
     </div>
   </div>
 
+
+  <div style="padding-top: 40px;">
+    <p class="h2" style="font-weight: bolder;text-align: center;">SÁCH BÁN CHẠY</p>
+  </div>
 
 
   <footer th:insert="~{footer :: footer}"></footer>
