--- a/BookSaleProject/src/main/resources/templates/login.html
+++ b/BookSaleProject/src/main/resources/templates/login.html
@@ -2,59 +2,63 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="stylesheet" href="../vendor/font-awesome/css/font-awesome.min.css" type="text/css">
-  <link rel="stylesheet" type="text/css" th:href="@{/css/reUse.css}">
-  <script th:src="@{/js/reUse.js}"></script>
-  <title>SignIn&SignUp</title>
-
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>My Login Page</title>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/login.css}">
 </head>
 
-<body>
- 
 
-  <h1 style="text-align:  center; color: pink;"><i class="fa-brands fa-instagram fa-sm"></i> LOGIN</h1>
-    <form th:action="@{/client/login}" th:method="post" th:object="${user}" style="text-align: center; color: pink;">
-        <div style="margin-bottom: 2%;">
-            <label>
-                Email:
-            </label>
-            <div>
-                <input type="text" th:field="*{email}" style="width: 20%; height: 30px;">
-            </div>
-        </div>
-        <div>
-            <label>
-                Password:
-            </label>
-            <div>
-                <input type="password" th:field="*{password}" style="width: 20%; height: 30px;">
-            </div>
-        </div>
-        <div>
-            <input type="checkbox" name="rememberme">
-            <label>
-                Remember me?
-            </label>
-        </div>
-        <div>
-            <button type="submit" style="border: solid pink; color: pink;">Login</button>
-        </div>
+<body class="my-login-page">
+	<section class="h-100">
+		<div class="container h-100">
+			<div class="row justify-content-md-center h-100">
+				<div class="card-wrapper">
+					<div class="brand">
+						<h3 class="text-danger text-center">Welcome You</h3>
+					</div>
+					<div class="card fat">
+						<div class="card-body">
+							<h4 class="card-title">Login</h4>
+							<form th:method="post" class="my-login-validation" th:action="@{/client/login}" th:object="${user}">
+								<div class="form-group">
+									<label for="email">Email</label>
+									<input id="email" type="text" class="form-control" th:field="*{email}">
+								</div>
 
+								<div class="form-group">
+									<label for="password">Password
+										<a href="#" class="float-right">
+											Forgot Password?
+										</a>
+									</label>
+									<input id="password" type="password" class="form-control" name="password" th:field="*{password}">
+								</div>
+
+								<div class="form-group">
+									<div class="custom-checkbox custom-control">
+										<input type="checkbox" name="remember" id="remember"
+											class="custom-control-input">
+										<label for="remember" class="custom-control-label">Remember Me</label>
+									</div>
+								</div>
+
+								<div class="form-group m-0">
+									<button type="submit" class="btn btn-primary btn-block">
+										Login
+									</button>
+								</div>
+								<div class="mt-4 text-center">
+									Don't have an account? <a href="#">Create One</a>
+								</div>
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
 </body>
 
 </html>
